--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
